new logo added and some issues fixed
